--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "matsfx-site",
+  "name": "matsfx-backend",
   "version": "1.0.0",
-  "type": "module",
   "dependencies": {
     "@netlify/blobs": "^7.0.0"
   }
